Update ScheduleService.java